--- a/manuscripts/24-jb-dags/24-jb-measurement-sample-restriction.qmd
+++ b/manuscripts/24-jb-dags/24-jb-measurement-sample-restriction.qmd
@@ -646,7 +646,9 @@ Note that @tbl-terminologyselectionrestrictionbaseline $\mathcal{G}_{2.1}$ is id
 
 ### Example 3: Correlated measurement error of effect-modifiers for an overly ambitious target population
 
-@tbl-terminologyselectionrestrictionbaseline $\mathcal{G}_{3.1}$ 
+@tbl-terminologyselectionrestrictionbaseline $\mathcal{G}_{3.1}$ considers the threats to target validity from correlated measurement error of effect-modifiers in a heterogeneous sample.  The trail of the serpant of measurement error bias runs across every study. Challenges for managing this serpant are greatly augmented where structures of measurement error may open pathways of bias linking treatments and outcomes in absence of causality.  
+
+Suppose the investigators are conducting a randomised cross-cultural experiment. Suppose further there is no treatment effect. Structural sources bias may open paths between the treatment and outcome in the absence of treatment effects. 
 
 @tbl-terminologyselectionrestrictionbaseline $\mathcal{G}_{3.2}$ 
 
