--- a/manuscripts/24-jb-dags/24-jb-swigs.qmd
+++ b/manuscripts/24-jb-dags/24-jb-swigs.qmd
@@ -342,11 +342,11 @@ We have stated each causal questions in relation to well-defined causal contrast
 
 Let's work through an example imagining we obtain the following estimates:
 
-Group F = 0:
+Outcomes A = 0:
     - $\mu_{00} = 5$
     - $\mu_{01} = 15$
 
-Group F = 1:
+Outcomes A = 1:
     - $\mu_{10} = 10$
     - $\mu_{11} = 20$
 
