selection bias draft nearing final draft stage

--- a/manuscripts/24-jb-dags/24-jb-measurement-sample-restriction.qmd
+++ b/manuscripts/24-jb-dags/24-jb-measurement-sample-restriction.qmd
@@ -639,31 +639,36 @@ discussion on this topic, see: @imai2008misunderstandings;
 @tbl-terminologyselectionrestrictionbaseline $\mathcal{G}_{2.1}$ presents a scenario in which there the source population does not meet eligibility criteria. Consider again the question of whether vascectomy affects a sense of meaning and purpose in life.  Suppose further we want to evaluate effects in New Zealand among men over the age of 40 who have no prior history of vasectomy, who are in relationships with heterosexual partners. The target population is weirder than WEIRD, in the sense it must be narrower.  We should not sample from young children, the elderly, and any who do not qualify.  For many scientific questions, a narrow population us desirable. 
 
 
-Note that @tbl-terminologyselectionrestrictionbaseline $\mathcal{G}_{2.1}$ is identical to @tbl-terminologycensoring $\mathcal{G}_5$ -- right-censoring bias with effect modifiers in an otherwise unconfounded study. The problem is formally the same: source-target population mismatch. However, whereas in the previous setting, mismatch arose from panel attrition. The sample at baseline was matched. Here there is a mismatch at baseline. 
+Note that @tbl-terminologyselectionrestrictionbaseline $\mathcal{G}_{2.1}$ is identical to @tbl-terminologycensoring $\mathcal{G}_5$ -- right-censoring bias with effect modifiers in an otherwise unconfounded study. The problem is formally the same: source-target population mismatch. However, whereas in the right-censoring setting, we imagined no source bias at baseline -- mismatch arose from attrition -- here there is a mismatch at baseline. 
 
-@tbl-terminologyselectionrestrictionbaseline $\mathcal{G}_{2.2}$ presents a solution. Ensure eligibility criteria are sensible and clear. Sample from the eligible population. With caution, apply survey or other weights if available, where these weights enable a closer approximate to the distributions of effect-modifiers in the target population. 
+@tbl-terminologyselectionrestrictionbaseline $\mathcal{G}_{2.2}$ presents a solution. Ensure eligibility criteria are scientifically relevant and feasible. Sample from this eligible population. With caution, apply survey or other weights where these weights enable a closer approximate to the distributions of effect-modifiers in the target population. 
 
 
-### Example 3: Correlated measurement error of effect-modifiers for an overly ambitious target population
+### Example 3: Correlated measurement error of covariates and outcome in the absence of a treatment effect
 
-@tbl-terminologyselectionrestrictionbaseline $\mathcal{G}_{3.1}$ considers the threats to target validity from correlated measurement error of effect-modifiers in a heterogeneous sample.  The trail of the serpant of measurement error bias runs across every study. Challenges for managing this serpant are greatly augmented where structures of measurement error may open pathways of bias linking treatments and outcomes in absence of causality.  
+@tbl-terminologyselectionrestrictionbaseline $\mathcal{G}_{3.1}$ considers the threats to target validity from correlated measurement errors in the target population arising from structured errors. Even if the treatment is measured with out error, there may be multiple sources of error leading to association without causation. 
 
-Suppose the investigators are conducting a randomised cross-cultural experiment. Suppose further there is no treatment effect. Structural sources bias may open paths between the treatment and outcome in the absence of treatment effects. 
+Suppose the structures of correlated error correspond to features of cultural units. Suppose further that investigators develop a plan for a cross-cultural investigation to clarify the relationship between interventions on religious service attendance ($A$) and an outcome $Y$ charitable giving. The investigators plan to obtain measures of covariates $L$ sufficient to control for confounding. Suppose the investigators observe religious attendance so that it is not measured with error [as did @shaver2021comparison], yet there is heterogeneity in the measurement of covariates $L$ and the outcome $Y$.  For example, if charitable giving measures are included as baseline covariates in $L$, measurement errors at baseline will be correlated with outcome measures. Perhaps in certain cultures, religious serive is under-reported (associated with witchcraft), in other cultures, it is over reported. Suppose further that true covariates affect the treatment and outcome. As shown in @tbl-terminologyselectionrestrictionbaseline $\mathcal{G}_{3.1}$, multiple paths of bias are opened. 
 
-@tbl-terminologyselectionrestrictionbaseline $\mathcal{G}_{3.2}$ 
+Moreover, because measurements are causally related to the phenomena they record, investigators cannot apply statistical tests to verify whether measures are recorded with error [@vanderweele2022; @vansteelandt2022].  Whether the phenomena that investigtors hope measure are functionally equivalent across cultural settings remains unknown. Of course, we all want to understand the species, however, asking coherent omparative questions in the human sciences is not as easy as lying. Including multiple cultures into a single analysis imposes considerable burdens on investigators. 
+
+
+
+@tbl-terminologyselectionrestrictionbaseline $\mathcal{G}_{3.2}$ provides sensible solution: restrict one's study to those cultures where causality can be identified.  Democritus wrote, 'I would rather discover one cause than gain the kingdom of Persia' [@freeman1948ancilla].' Paraphrasing Democritus we might say, 'I should rather discover one WIERD cause than the kingdom of associational comparative research'. 
 
 
 
 ### Example 4: Correlated measurement error of effect-modifiers for an overly ambitious target population
 
-@tbl-terminologyselectionrestrictionbaseline $\mathcal{G}_{4.1}$ 
+@tbl-terminologyselectionrestrictionbaseline $\mathcal{G}_{4.1}$ considers the threats to target validity from correlated measurement errors in the target population arising from structured errors linking measurements for the effect modifiers. Even if the treatment is randomised so that there are no open backdoor paths, and even if the treatment and outcome are measured without error, investigators will not be able to obtain valid estimates for treatment-effect heterogeneity from their data, nor will they be able to apply target-sample weights (such as census weights) to obtain valid estimates for the populations in which the measurement errros of effect modifiers are manifest. 
 
-@tbl-terminologyselectionrestrictionbaseline $\mathcal{G}_{4.2}$ 
+@tbl-terminologyselectionrestrictionbaseline $\mathcal{G}_{4.2}$ suggest that where measures of effect-modification are uncertain, best to consider settings in which the measurements are reliable -- whether or note the settings are WEIRD.
 
 
 ## Conclusions
 
 - Measurement first 
+The trail of the serpant of measurement error bias runs across every study. Challenges for managing this serpant are greatly augmented where structures of measurement error may open pathways of bias linking treatments and outcomes in absence of causality.  
 
 
 ### Building intuition for why definitions are insufficient for understanding selection and source biases
