--- a/manuscripts/24-jb-dags/24-jb-measurement-sample-restriction.tex
+++ b/manuscripts/24-jb-dags/24-jb-measurement-sample-restriction.tex
@@ -210,7 +210,7 @@
       
 
 
-\date{2024-05-24}
+\date{2024-05-25}
 \begin{document}
 \maketitle
 \begin{abstract}
@@ -1119,7 +1119,7 @@ observed data (\citeproc{ref-shiba2021}{Shiba and Kawahara
 2021}).However, if missingness is not completely at random, then
 identification may be compromised
 (\citeproc{ref-malinsky2022semiparametric}{Malinsky \emph{et al.} 2022};
-\citeproc{ref-tchetgen2017general}{\textbf{tchetgen2017general?}}).
+\citeproc{ref-tchetgen2017general}{Tchetgen Tchetgen and Wirth 2017}).
 
 \newpage{}
 
@@ -1430,43 +1430,97 @@ Note that Table~\ref{tbl-terminologyselectionrestrictionbaseline}
 Table~\ref{tbl-terminologycensoring} \(\mathcal{G}_5\) --
 right-censoring bias with effect modifiers in an otherwise unconfounded
 study. The problem is formally the same: source-target population
-mismatch. However, whereas in the previous setting, mismatch arose from
-panel attrition. The sample at baseline was matched. Here there is a
-mismatch at baseline.
+mismatch. However, whereas in the right-censoring setting, we imagined
+no source bias at baseline -- mismatch arose from attrition -- here
+there is a mismatch at baseline.
 
 Table~\ref{tbl-terminologyselectionrestrictionbaseline}
 \(\mathcal{G}_{2.2}\) presents a solution. Ensure eligibility criteria
-are sensible and clear. Sample from the eligible population. With
-caution, apply survey or other weights if available, where these weights
-enable a closer approximate to the distributions of effect-modifiers in
-the target population.
+are scientifically relevant and feasible. Sample from this eligible
+population. With caution, apply survey or other weights where these
+weights enable a closer approximate to the distributions of
+effect-modifiers in the target population.
 
-\subsubsection{Example 3: Correlated measurement error of
-effect-modifiers for an overly ambitious target
-population}\label{example-3-correlated-measurement-error-of-effect-modifiers-for-an-overly-ambitious-target-population}
-
-Table~\ref{tbl-terminologyselectionrestrictionbaseline}
-\(\mathcal{G}_{3.1}\)
+\subsubsection{Example 3: Correlated measurement error of covariates and
+outcome in the absence of a treatment
+effect}\label{example-3-correlated-measurement-error-of-covariates-and-outcome-in-the-absence-of-a-treatment-effect}
 
 Table~\ref{tbl-terminologyselectionrestrictionbaseline}
-\(\mathcal{G}_{3.2}\)
+\(\mathcal{G}_{3.1}\) considers the threats to target validity from
+correlated measurement errors in the target population arising from
+structured errors. Even if the treatment is measured with out error,
+there may be multiple sources of error leading to association without
+causation.
+
+Suppose the structures of correlated error correspond to features of
+cultural units. Suppose further that investigators develop a plan for a
+cross-cultural investigation to clarify the relationship between
+interventions on religious service attendance (\(A\)) and an outcome
+\(Y\) charitable giving. The investigators plan to obtain measures of
+covariates \(L\) sufficient to control for confounding. Suppose the
+investigators observe religious attendance so that it is not measured
+with error (as did
+\citeproc{ref-shaver2021comparison}{\textbf{shaver2021comparison?}}),
+yet there is heterogeneity in the measurement of covariates \(L\) and
+the outcome \(Y\). For example, if charitable giving measures are
+included as baseline covariates in \(L\), measurement errors at baseline
+will be correlated with outcome measures. Perhaps in certain cultures,
+religious serive is under-reported (associated with witchcraft), in
+other cultures, it is over reported. Suppose further that true
+covariates affect the treatment and outcome. As shown in
+Table~\ref{tbl-terminologyselectionrestrictionbaseline}
+\(\mathcal{G}_{3.1}\), multiple paths of bias are opened.
+
+Moreover, because measurements are causally related to the phenomena
+they record, investigators cannot apply statistical tests to verify
+whether measures are recorded with error
+(\citeproc{ref-vanderweele2022}{VanderWeele 2022};
+\citeproc{ref-vansteelandt2022}{Vansteelandt and Dukes 2022}). Whether
+the phenomena that investigtors hope measure are functionally equivalent
+across cultural settings remains unknown. Of course, we all want to
+understand the species, however, asking coherent omparative questions in
+the human sciences is not as easy as lying. Including multiple cultures
+into a single analysis imposes considerable burdens on investigators.
+
+Table~\ref{tbl-terminologyselectionrestrictionbaseline}
+\(\mathcal{G}_{3.2}\) provides sensible solution: restrict one's study
+to those cultures where causality can be identified. Democritus wrote,
+`I would rather discover one cause than gain the kingdom of Persia'
+(\citeproc{ref-freeman1948ancilla}{Freeman 1948}).' Paraphrasing
+Democritus we might say, `I should rather discover one WIERD cause than
+the kingdom of associational comparative research'.
 
 \subsubsection{Example 4: Correlated measurement error of
 effect-modifiers for an overly ambitious target
 population}\label{example-4-correlated-measurement-error-of-effect-modifiers-for-an-overly-ambitious-target-population}
 
 Table~\ref{tbl-terminologyselectionrestrictionbaseline}
-\(\mathcal{G}_{4.1}\)
+\(\mathcal{G}_{4.1}\) considers the threats to target validity from
+correlated measurement errors in the target population arising from
+structured errors linking measurements for the effect modifiers. Even if
+the treatment is randomised so that there are no open backdoor paths,
+and even if the treatment and outcome are measured without error,
+investigators will not be able to obtain valid estimates for
+treatment-effect heterogeneity from their data, nor will they be able to
+apply target-sample weights (such as census weights) to obtain valid
+estimates for the populations in which the measurement errros of effect
+modifiers are manifest.
 
 Table~\ref{tbl-terminologyselectionrestrictionbaseline}
-\(\mathcal{G}_{4.2}\)
+\(\mathcal{G}_{4.2}\) suggest that where measures of effect-modification
+are uncertain, best to consider settings in which the measurements are
+reliable -- whether or note the settings are WEIRD.
 
 \subsection{Conclusions}\label{conclusions}
 
 \begin{itemize}
 \tightlist
 \item
-  Measurement first
+  Measurement first The trail of the serpant of measurement error bias
+  runs across every study. Challenges for managing this serpant are
+  greatly augmented where structures of measurement error may open
+  pathways of bias linking treatments and outcomes in absence of
+  causality.
 \end{itemize}
 
 \subsubsection{Building intuition for why definitions are insufficient
@@ -1899,6 +1953,10 @@ designs for extending causal inferences from a randomized trial to a
 target population. \emph{American Journal of Epidemiology},
 \textbf{190}(8), 1632--1642.
 
+\bibitem[\citeproctext]{ref-freeman1948ancilla}
+Freeman, K (1948) \emph{Ancilla to the pre-socratic philosophers},
+Reprint edition, Cambridge, MA: Harvard University Press.
+
 \bibitem[\citeproctext]{ref-greenland2009commentary}
 Greenland, S (2009) Commentary: Interactions in epidemiology: Relevance,
 identification, and estimation. \emph{Epidemiology}, \textbf{20}(1),
@@ -2038,6 +2096,11 @@ organizational schema for causal effects. \emph{Epidemiology},
 \textbf{25}(4), 618.
 doi:\href{https://doi.org/10.1097/EDE.0000000000000114}{10.1097/EDE.0000000000000114}.
 
+\bibitem[\citeproctext]{ref-tchetgen2017general}
+Tchetgen Tchetgen, EJ, and Wirth, KE (2017) A general instrumental
+variable framework for regression analysis with outcome missing not at
+random. \emph{Biometrics}, \textbf{73}(4), 1123--1131.
+
 \bibitem[\citeproctext]{ref-tripepi2007}
 Tripepi, G, Jager, KJ, Dekker, FW, Wanner, C, and Zoccali, C (2007)
 Measures of effect: Relative risks, odds ratios, risk difference, and
@@ -2056,6 +2119,12 @@ VanderWeele, TJ (2012) Confounding and Effect Modification: Distribution
 and Measure. \emph{Epidemiologic Methods}, \textbf{1}(1), 55--82.
 doi:\href{https://doi.org/10.1515/2161-962X.1004}{10.1515/2161-962X.1004}.
 
+\bibitem[\citeproctext]{ref-vanderweele2022}
+VanderWeele, TJ (2022) Constructed measures and causal inference:
+Towards a new model of measurement for psychosocial constructs.
+\emph{Epidemiology}, \textbf{33}(1), 141.
+doi:\href{https://doi.org/10.1097/EDE.0000000000001434}{10.1097/EDE.0000000000001434}.
+
 \bibitem[\citeproctext]{ref-vanderweele2007a}
 VanderWeele, TJ, and Robins, JM (2007) Directed acyclic graphs,
 sufficient causes, and the properties of conditioning on a common
@@ -2068,6 +2137,12 @@ VanderWeele, TJ, and Robins, JM (2010) Signed directed acyclic graphs
 for causal inference. \emph{Journal of the Royal Statistical Society
 Series B: Statistical Methodology}, \textbf{72}(1), 111--127.
 doi:\href{https://doi.org/10.1111/j.1467-9868.2009.00728.x}{10.1111/j.1467-9868.2009.00728.x}.
+
+\bibitem[\citeproctext]{ref-vansteelandt2022}
+Vansteelandt, S, and Dukes, O (2022) Assumption-lean inference for
+generalised linear model parameters. \emph{Journal of the Royal
+Statistical Society Series B: Statistical Methodology}, \textbf{84}(3),
+657--685.
 
 \bibitem[\citeproctext]{ref-westreich2017}
 Westreich, D, Edwards, JK, Lesko, CR, Stuart, E, and Cole, SR (2017a)
