--- a/manuscripts/24-jb-dags/24-jb-swigs.qmd
+++ b/manuscripts/24-jb-dags/24-jb-swigs.qmd
@@ -1,9 +1,10 @@
 ---
 title: 'The Transformation of The Obvious: Causal Inference for Interaction, Mediation, and Time-Varying Treatments'
 abstract: |
-  The analysis of 'moderation', 'interaction', 'mediation', and 'longitudinal growth' is widespread in the human sciences, yet confusion persists. We leverage decades of advancements in causal inference to explain why the quantities derived from statistical models are often ambiguous, despite model sophistication. We emphasise the necessity of (1) clearly stating a causal question and (2) assessing the identifiability of the question with available data before statistical analysis. Without these steps, confusion is inevitable. Properly framing and addressing causal question of interaction, mediation, and time-varying treatments reveals the limitations of popular methods and guides researchers towards more effective approaches.
+  The analysis of 'moderation', 'interaction', 'mediation', and 'longitudinal growth' is widespread in the human sciences, yet subject to confusion. We use advances in causal inference to explain why the quantities derived from statistical models routinely employed in the human sciences are often ambiguous. We emphasise the necessity of (1) clearly stating a causal question and (2) assessing the identifiability of the question with available data before statistical analysis. Without these steps, confusion is inevitable. Properly framing and addressing causal questions of interaction, mediation, and time-varying treatments reveals the limitations of popular methods and guides researchers to clearer understanding of the phenomena that animate our interests.
   
-  **KEYWORDS**: *Causal Inference*; *SWIGs*; *DAGs*; *Evolution*; *Mediation*; *Longitudinal Growth*; *Time-varying Treatments*
+  **KEYWORDS**: *Causal Inference*; *DAGs*; *Evolution*; *Mediation*; *Longitudinal Growth*; Single World Intervention Graphs, *SWIGs*; *Time-varying Treatments*
+
 author: 
   - name: Joseph A. Bulbulia
     affiliation: Victoria University of Wellington, New Zealand
@@ -104,9 +105,7 @@ loadfonts(device = 'all')
 
 The young Charles Darwin was a keen fossil hunter and amateur geologist. In August 1831, he accompanied the geologist Adam Sedgwick to the Glyderau mountain range in northern Wales.
 
-<!-- > We spent many hours in Cwm Idwal, examining all the rocks with extreme care, as Sedgwick was anxious to find fossils in them; but  -->
-
-> [N]either of us saw a trace of the wonderful glacial phenomena all around us; we did not notice the plainly scored rocks, the perched boulders, the lateral and terminal moraines. Yet these phenomena are so conspicuous that ... a house burnt down by fire did not tell its story more plainly than did this valley. If it had still been filled by a glacier, the phenomena would have been less distinct than they now are. [@darwin1887life: p.25]
+> We spent many hours in Cwm Idwal, ... but neither of us saw a trace of the wonderful glacial phenomena all around us; we did not notice the plainly scored rocks, the perched boulders, the lateral and terminal moraines. Yet these phenomena are so conspicuous that ... a house burnt down by fire did not tell its story more plainly than did this valley. If it had still been filled by a glacier, the phenomena would have been less distinct than they now are. [@darwin1887life: p.25]
 
 This 'striking instance of how easy it is to overlook phenomena, however conspicuous' [@darwin1887life: p.25] is cited in cultural evolution to emphasise the importance of theory for organising observations [@wilson2008evolution]. However, the importance of theory to scientific discovery carries even broader relevance: it applies to the statistical methods scientists routinely apply to the data they collect. Without a clear framework that relates statistical models to observations, the understanding we seek from our data remains elusive.
 
@@ -118,7 +117,7 @@ There are several excellent resources available that clarify workflows for causa
 
 Here, our ambition is modest.
 
-**Part 1** considers how to ask causal questions when our interest is in comparing effect magnitudes between groups (effect-modification).
+**Part 1** considers how to ask causal questions when our interest is in comparing effect magnitudes between groups (effect modification).
 
 **Part 2** considers how to ask causal questions when our interest is in evaluating the joint effects of two independent interventions (interaction).
 
