--- a/manuscripts/24-jb-dags/24-jb-dags.qmd
+++ b/manuscripts/24-jb-dags/24-jb-dags.qmd
@@ -384,11 +384,11 @@ The conventions we use to describe components of our causal graphs are given in 
 Nodes, Edges, Conditioning Conventions.
 :::
 
-- **Node**: a node or vertex represents characteristics or features of units within a population on a causal diagram -- that is a 'variable.' In causal directed acyclic graphs, we draw nodes with respect to the *target population*, which is the population for whom investigators seek causal inferences [@suzuki2020]. Time-indexed node:  $X_t$ denotes relative chronology; $X_{\customphi{t}}$ is our convention for indicating that timing is assumed, perhaps erroneously. 
+- **Node**: a node or vertex represents characteristics or features of units within a population on a causal diagram -- that is a 'variable.' In causal directed acyclic graphs, we draw nodes with respect to the *target population*, which is the population for whom investigators seek causal inferences [@suzuki2020]. Time-indexed node:  $X_t$ denotes relative chronology; $X_{\customphi{t}}$ is our convention for indicating that timing is assumed, perhaps erroneously.  
 
 - **Edge without an Arrow** ($\association$): path of association, causality not asserted.
 
-- **Red Edge without an Arrow** ($\association$): confounding path: ignores arrows to clarify statistical dependencies. 
+- **Red Edge without an Arrow** ($\associationred$): confounding path: ignores arrows to clarify statistical dependencies. 
 
 - **Arrow** ($\rightarrowNEW$): denotes causal relationship from the node at the base of the arrow (a parent) to the node at the tip of the arrow (a child). We typically refrain from drawing an arrow from treatment to outcome to avoid asserting a causal path from $A$ to $Y$ because the function of a causal directed acyclic graph is to evaluate whether causality can be identified for this path.
 
